# seidart-ext

./: README.md  masw_module.py  pyproject.toml  setup.py
dev/: masw2.prj
docs/source/: conf.py
